# POV

./: .gitignore  CMakeLists.txt  Makefile  README.md  calculation.py  hall_PD2.c  hall_int0_test.c  led_PD6.c  pov.c  serial.c  test_spi.c  test_timer.c  timer.c  timer.h
cmake/: avr.toolchain.cmake
common/: build_common.mk  encoder.c  encoder.h  led.c  led.h  serial.c  serial.h  timer.c  timer.h
src/: hall_PD2.cpp  led_PD6.cpp  main.cpp  pov.cpp  serial.cpp  shell.cpp  test_spi.cpp  test_timer.cpp
src/common/: config.h  encoder.cpp  encoder.h  led_spi.cpp  led_spi.h  ring_buffer.h  serial.cpp  serial.h  shell.cpp  shell.h  timer.cpp  timer.h
